# ecchan

./: Cargo.toml  README.md
dms/: Ecchan.qml  Settings.qml  plugin.json  qmldir  utils.js
dms/Common/: Socket.qml  SocketCbManager.qml  SocketHandler.qml  State.qml  qmldir
dms/Services/: EcSocket.qml  qmldir
dms/Widgets/: CircleGauge.qml  DankEditableDropdown.qml  ToggleActionButton.qml  Tooltip.qml  fzf.js  qmldir
ec/: Cargo.toml
ec/src/: ec.rs  fw.rs  lib.rs  models.rs  single_instance.rs
ec/src/ec/: ec_drv.rs  ec_sys.rs
ec/src/ec/ec_sys/: tests.rs
ec/src/ec/ec_sys/tests/: battery.rs  cooler_boost.rs  curves.rs  ec.rs  fan_mode.rs  fan_rpm.rs  fan_supported.rs  fw.rs  key_swap.rs  method_read.rs  method_write.rs  misc.rs  mute_leds.rs  rt.rs  shift_mode.rs  thermal.rs  webcam.rs
ec/src/fw/: g2_10.rs  wmi2.rs
ec/src/fw/wmi2/: g2_10.rs
ec/src/models/: titan_gt77_12uhs.rs
ecchan-client-qml/: Cargo.toml  build.rs  qt-plugin.version
ecchan-client-qml/src/: client.rs  ec_socket.rs  lib.rs  qml.rs
ecchan-dbus/: Cargo.toml
ecchan-dbus/src/: args.rs  data.rs  dbus.rs  ec.rs  err.rs  main.rs  objects.rs  setup.rs  sock.rs
ecchan-dbus/src/objects/: fw.rs  methods.rs  shift_mode.rs  utils.rs
ecchan-ipc/: Cargo.toml
ecchan-ipc/src/: lib.rs  method.rs  ret.rs
ecchan-server/: Cargo.toml
ecchan-server/src/: call.rs  handle_client.rs  main.rs  ret.rs  signal.rs
msi-flux/: Cargo.toml
msi-flux/src/: main.rs
