[package]
name = "ec"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
log = "0.4.29"
sayuri = "0.1.5"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.9.0"
strum = { version = "0.28.0", features = ["derive"] }

[dependencies.nix]
version = "0.31.2"
features = ["fs", "socket"]
