[package]
name = "ecchan-client"
version = "0.1.0"
edition = "2024"

[features]
link_qt_object_files = [ "cxx-qt-build/link_qt_object_files" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
ecchan-ipc = { path = "../ecchan-ipc" }
serde_json = "1.0.149"
rustix = { version = "1.1.4", features = ["net", "event", "fs"] }
snafu = "0.9.0"
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
sayuri = "0.1.6"
serde = "1.0.228"

[build-dependencies]
cxx-qt-build = "0.8.1"
