[package]
name = "ecchan-dbus"
version = "0.1.0"
edition = "2024"

[dependencies]
ecchan-ipc = { path = "../ecchan-ipc" }
dbus = "0.9.10"
dbus-crossroads = "0.5.3"
sayuri = "0.1.5"

env_logger = "0.11.10"
log = "0.4.29"
serde_json = "1.0.149"
cobs = "0.5.1"
snafu = "0.9.0"
ctrlc = "3.5.2"
rustix = { version = "1.1.4", features = ["net", "event", "fs"] }
polonius-the-crab = "0.5.0"
