[package]
name = "ecchan-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
ec = { path = "../ec" }
log = "0.4.29"
serde_json = "1.0.149"
cobs = "0.5.1"
snafu = "0.9.0"
ctrlc = "3.5.2"
rustix = { version = "1.1.4", features = ["net", "event", "fs"] }
ecchan-ipc = { path = "../ecchan-ipc" }
