[package]
name = "ecchan-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
ec = { path = "../ec" }
log = "0.4.29"
serde_json = "1.0.149"
cobs = "0.5.1"
snafu = "0.9.0"
ecchan-ipc = { path = "../ecchan-ipc" }
tokio = { version = "1.52.0", features = ["macros", "net", "sync", "signal", "rt-multi-thread"] }
